[project]
name = "agents-packaged"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rabia Mehmood", email = "rabiamehmood188@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []
[project.scripts]
agents-packaged = "agents_packaged.main:run_agent"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
